[RIA] Fixed some layout issues in Auction Cards

--- a/Project_RIA/src/main/webapp/css/mystyle.css
+++ b/Project_RIA/src/main/webapp/css/mystyle.css
@@ -218,7 +218,6 @@ body {
 .tab-content {
   display: none;
   padding: 20px;
-  text-align: center;
 }
 
 .tab-content.active-tab {
